Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16103

Inconsistent warning after removing CMake from environment

XMLWordPrintable

      1. Make sure you have a CMake binary in your PATH variable.
      2. Start Creator with empty settings, e.g. by passing the parameter -settingspath <empty directory>.
        Creator will find CMake and configure a default kit with it.
      3. Quit Creator.
      4. Make sure you do not have a CMake binary in your PATH variable.
      5. Start Creator with the same settings as in step 2, e.g. by passing the parameter -settingspath <same directory as in step 2>.
      6. Go to "Tools" -> "Options..." -> "Build & Run" -> "Kits".
        A warning icon is being displayed for the default kit.
      7. Hover the mouse pointer over the default kit.
        A tooltip will be shown: "No CMake Tools configured, CMake Generator will be ignored".
      8. Select the default kit.
        There is no CMake Generator selected for the kit. That combo box is completely empty.

      Creator should not show a warning that a non-existing setting will be ignored. If a CMake Generator is still selected, Creator should display it.

        For Gerrit Dashboard: QTCREATORBUG-16103
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes