CMake: Do not warn if there is no cmake but a generator is selected

Task-number: QTCREATORBUG-16103
Change-Id: I4fcefd8ab68b6e34ca92e0d0c6fc1a8e6ec6b70c
Reviewed-by: Tim Jenssen <tim.jenssen@theqtcompany.com>